--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -3,10 +3,7 @@ Vagrant.configure("2") do |config|
   config.vm.box = "jonafoll/debian-netinst"
   config.vm.box_version = "1.0.0"
   config.vm.provider "virtualbox" do |vb|
-    # Customize VirtualBox settings if needed
-    vb.memory = "1024"
-    vb.cpus = 2
-  end  # Add this line to close the config.vm.provider block
+  end  
 
   # Provisioning using a shell script
   config.vm.provision "shell", path: "vagrant_install.sh"
