--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -1,11 +1,7 @@
-
 Vagrant.configure("2") do |config|
   config.vm.box = "jonafoll/debian-netinst"
   config.vm.box_version = "1.0.0"
-  config.vm.provider "virtualbox" do |vb|
-  end  
 
-  # Provisioning using a shell script
+  # Provisioning
   config.vm.provision "shell", path: "vagrant_install.sh"
 end
-
